--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "fastapi>=0.123.9",
+    "pydantic-settings>=2.12.0",
+    "ruff>=0.14.8",
+    "sqlalchemy>=2.0.44",
+    "uvicorn>=0.38.0",
+]
