--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,7 +7,14 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.123.9",
     "pydantic-settings>=2.12.0",
-    "ruff>=0.14.8",
+    "pydantic[email]>=2.12.5",
     "sqlalchemy>=2.0.44",
     "uvicorn>=0.38.0",
+]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.8",
+    "httpx>=0.28.1",
+    "pytest>=9.0.1",
 ]
