--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "asyncpg>=0.29.0",
     "bcrypt>=4.2.0",
     "fastapi>=0.123.9",
     "pydantic-settings>=2.12.0",
