--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "asyncpg>=0.29.0",
     "bcrypt>=4.2.0",
     "fastapi>=0.123.9",
+    "python-jose[cryptography]>=3.3.0",
     "pydantic-settings>=2.12.0",
     "pydantic[email]>=2.12.5",
     "sqlalchemy>=2.0.44",
