--- a/docs/sharing.yaml
+++ b/docs/sharing.yaml
@@ -36,15 +36,9 @@ paths:
             schema:
               type: object
               required:
-                - requesterId
                 - userId
                 - permission
               properties:
-                requesterId:
-                  type: string
-                  format: uuid
-                  example: "550e8400-e29b-41d4-a716-446655440000"
-                  description: ID пользователя, выполняющего запрос
                 userId:
                   type: string
                   format: uuid
@@ -52,13 +46,13 @@ paths:
                   description: ID пользователя, которому предоставляется доступ
                 permission:
                   type: string
-                  enum: [view, edit, admin]
+                  enum: [view, edit]
                   example: "edit"
                   description: |
                     Уровень доступа:
                     - view: только просмотр
                     - edit: просмотр и редактирование
-                    - admin: полный доступ (включая управление доступом)
+                    Примечание: owner определяется автоматически (создатель доски)
       responses:
         '200':
           description: Доступ успешно предоставлен
@@ -77,7 +71,7 @@ paths:
                     example: "660e8400-e29b-41d4-a716-446655440000"
                   permission:
                     type: string
-                    enum: [view, edit, admin]
+                    enum: [view, edit]
                     example: "edit"
                   grantedAt:
                     type: string
@@ -193,19 +187,13 @@ paths:
             schema:
               type: object
               required:
-                - requesterId
                 - permission
               properties:
-                requesterId:
-                  type: string
-                  format: uuid
-                  example: "550e8400-e29b-41d4-a716-446655440000"
-                  description: ID пользователя, выполняющего запрос
                 permission:
                   type: string
-                  enum: [view, edit, admin]
-                  example: "admin"
-                  description: Новый уровень доступа
+                  enum: [view, edit]
+                  example: "edit"
+                  description: Новый уровень доступа (view или edit)
       responses:
         '200':
           description: Уровень доступа успешно изменен
@@ -224,8 +212,8 @@ paths:
                     example: "660e8400-e29b-41d4-a716-446655440000"
                   permission:
                     type: string
-                    enum: [view, edit, admin]
-                    example: "admin"
+                    enum: [view, edit]
+                    example: "edit"
                   updatedAt:
                     type: string
                     format: date-time
@@ -283,14 +271,7 @@ paths:
           application/json:
             schema:
               type: object
-              required:
-                - requesterId
-              properties:
-                requesterId:
-                  type: string
-                  format: uuid
-                  example: "550e8400-e29b-41d4-a716-446655440000"
-                  description: ID пользователя, выполняющего запрос
+              properties: {}
       responses:
         '204':
           description: Доступ успешно отозван
@@ -352,8 +333,13 @@ components:
           example: "user2@example.com"
         permission:
           type: string
-          enum: [view, edit, admin]
+          enum: [view, edit]
           example: "edit"
+          description: |
+            Уровень доступа:
+            - view: только просмотр
+            - edit: просмотр и редактирование
+            Примечание: owner определяется автоматически (создатель доски)
         grantedAt:
           type: string
           format: date-time
